# LightRAG

./: Dockerfile  docker-compose.yml  pyproject.toml
lightrag/: constants.py  lightrag.py
lightrag/api/: custom_api.py  lightrag_server.py  rag_adapter.py
lightrag/api/routers/: document_routes.py  query_routes.py
lightrag_webui/src/api/: lightrag.ts
lightrag_webui/src/components/graph/: GraphLabels.tsx
lightrag_webui/src/features/: GraphViewer.tsx  RetrievalTesting.tsx
lightrag_webui/src/hooks/: useLightragGraph.tsx
nanobot/.workspace/sessions/: cli_direct.jsonl
nanobot/agent/: loop.py
nanobot/providers/: __init__.py  openai_codex_provider.py
nanobot/skills/batch_analyzer/: SKILL.md
nanobot/skills/financial_navigator/: SKILL.md
nanobot/skills/report_filtering/: SKILL.md
script/raganything/: step2_raganything.py  step2_vission_embedding.py
